fixed spacing

--- a/App/static/css/addCourse.css
+++ b/App/static/css/addCourse.css
@@ -1,9 +1,10 @@
-.formContainer{
+.formContainer {
     margin-top: 30px;
     margin-bottom: 20px;
+    width: 500px;
 }
 
-form{
+form {
     background-color: var(--secondary-color);
     padding: 2.5rem 2rem;
     border-radius: 10px;
@@ -12,49 +13,51 @@ form{
     margin-left: auto;
     margin-right: auto;
 
-    max-width: 750px;
+    width: fit-content;
 
-    box-shadow: 8px 10px 37px -12px rgba(0,0,0,0.62);
-    -webkit-box-shadow: 8px 10px 37px -12px rgba(0,0,0,0.62);
-    -moz-box-shadow: 8px 10px 37px -12px rgba(0,0,0,0.62);
+    box-shadow: 8px 10px 37px -12px rgba(0, 0, 0, 0.62);
+    -webkit-box-shadow: 8px 10px 37px -12px rgba(0, 0, 0, 0.62);
+    -moz-box-shadow: 8px 10px 37px -12px rgba(0, 0, 0, 0.62);
 }
 
-form h2{
+form h2 {
     margin-bottom: 30px;
     font-size: 30px;
 }
 
-form textarea{
+form textarea {
     resize: none;
 }
 
-.normalLabel{
+.normalLabel {
     display: flex;
     flex-direction: column;
     text-align: left;
 }
 
-.formInputContainer{
+.formInputContainer {
     margin-bottom: 20px;
 }
 
-.mainLabel{
+
+.mainLabel {
     margin-bottom: 5px;
     font-size: 18px;
     font-weight: 500;
 }
 
-.normalLabel input, .normalLabel textarea{
+.normalLabel input,
+.normalLabel textarea {
     background: var(--primary-color);
     border: none;
-    padding: 1rem 0.8rem;
+    padding: 0.5rem 0.8rem;
     color: white;
     border-radius: 6px;
     width: 100%;
 }
 
 
-#submitBtn{
+#submitBtn {
     background: var(--tertiary-color);
     color: white;
     border: none;
@@ -68,33 +71,35 @@ form textarea{
     width: 100%;
 }
 
-#submitBtn:hover{
+#submitBtn:hover {
     background: #5d45bd;
 }
 
-.levelContainer, .semesterContainer{
+.levelContainer,
+.semesterContainer {
     text-align: left;
 }
 
-.levelContainer .mainLabel, .semesterContainer .mainLabel{
+.levelContainer .mainLabel,
+.semesterContainer .mainLabel {
     margin-right: 10px;
 }
 
-.smallLabel{
+.smallLabel {
     margin-right: 7px;
 }
 
 
 /* media queries */
-@media screen and (min-width: 480px){
-    form h2{
+@media screen and (min-width: 480px) {
+    form h2 {
         font-size: 34px;
     }
 }
 
 
-@media screen and (min-width: 900px){
-    #SubmitBtn{
+@media screen and (min-width: 900px) {
+    #SubmitBtn {
         font-size: 18px;
     }
 }
